fix: build multi env

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -12,7 +12,7 @@
 <body style="height: 100vh;">
   <elements-api 
     logoUrl="/logo.png"
-    apiDescriptionUrl="/openapi.json" 
+    apiDescriptionUrl="{{BUILD_PREFIX}}/openapi.json" 
     router="hash"
     layout="sidebar" 
   />
